--- a/CSS/header.css
+++ b/CSS/header.css
@@ -105,7 +105,7 @@ h1 {
 
 /* Social Icons */
 section {
-  margin: 70px auto;
+  margin: 80px auto;
 }
 
 .ease-all {
@@ -135,4 +135,8 @@ section {
 .social li a:hover {
   box-shadow: inset 0 0 0 40px #666;
   color: #fff;
+}
+
+.social-m {
+  margin-right: -35px;
 }
