--- a/CSS/links.css
+++ b/CSS/links.css
@@ -4,7 +4,7 @@
   position: relative;
   max-width: 800px;
   min-width: 400px;
-  margin: 50px auto;
+  margin: 75px auto;
   background: #191c29;
   box-shadow: 0px 10px 80px #fff;
   padding: 25px;
@@ -84,7 +84,7 @@
 }
 
 .links-wrapper {
-  width: 500px;
+  width: 400px;
 }
 
 .links {
@@ -93,6 +93,7 @@
   align-items: center;
   justify-content: space-between;
   margin: 10px auto;
+  max-width: 380px;
 }
 
 .links h2,
@@ -142,29 +143,10 @@ p {
   transition: 800ms ease all;
 }
 
-/* Share Icon */
-.ease-all {
-  transition: all 400ms ease-in-out;
-}
-
-.social {
-  display: flex;
-  text-align: center;
-  align-items: center;
-}
-
-.social li a {
-  float: left;
-  width: 40px;
-  height: 40px;
-  margin-right: 1rem;
-  padding-top: 11px;
+.link-img {
+  width: 50px;
+  height: 50px;
+  border: 1px solid white;
   border-radius: 50%;
-  box-shadow: inset 0 0 0 3px #fff;
-  color: #fff;
-}
-
-.social li a:hover {
-  box-shadow: inset 0 0 0 40px #666;
-  color: #fff;
+  margin-left: -15px;
 }
