--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,5 +1,6 @@
 @import url("https://fonts.googleapis.com/css?family=Patua+One");
 @import url("https://fonts.googleapis.com/css?family=Lobster");
+@import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
 
 /* Defaults */
 *,
@@ -16,6 +17,7 @@ body {
   background-color: #112;
   margin: 0;
   padding: 0;
+  font-family: "Poppins", sans-serif;
 }
 
 ul {
@@ -41,8 +43,12 @@ p {
   max-width: 1140px;
 }
 
+section {
+  margin: 80px auto;
+}
+
 /*Defaults*/
-/* @media (min-width: 768px) {
+@media (min-width: 768px) {
 }
 
 @media (min-width: 992px) {
@@ -52,4 +58,4 @@ p {
   .container {
     max-width: 1140px;
   }
-} */
+}
