--- a/CSS/header.css
+++ b/CSS/header.css
@@ -108,7 +108,8 @@ h1 {
   transition: all 400ms ease-in-out;
 }
 
-.social {
+/* Main Social Btns */
+.social-btns {
   display: flex;
   flex-wrap: nowrap;
   justify-content: center;
@@ -118,7 +119,7 @@ h1 {
   cursor: pointer;
 }
 
-.social li a {
+.social-btns li a {
   float: left;
   width: 40px;
   height: 40px;
@@ -129,11 +130,38 @@ h1 {
   color: #fff;
 }
 
-.social li a:hover {
+.social-btns li a:hover {
   box-shadow: inset 0 0 0 40px #666;
   color: #fff;
 }
 
-.social-m {
+/* Links Share Btns */
+.share-btn {
+  display: flex;
+  flex-wrap: nowrap;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  position: sticky;
+  cursor: pointer;
+}
+
+.share-btn li a {
+  float: left;
+  width: 40px;
+  height: 40px;
+  margin-right: 1rem;
+  padding-top: 11px;
+  border-radius: 50%;
+  box-shadow: inset 0 0 0 3px #fff;
+  color: #fff;
+}
+
+.share-btn li a:hover {
+  box-shadow: inset 0 0 0 40px #666;
+  color: #fff;
+}
+
+.share-btn {
   margin-right: -35px;
 }
